--- a/Yolov5_DeepSort.ipynb
+++ b/Yolov5_DeepSort.ipynb
@@ -30,9 +30,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "s7gz3irgVxII",
-        "outputId": "2e17ba14-abf9-458f-e433-db31695d3cdd"
+        "outputId": "fc79b9c5-67b9-469b-c4db-2c3d33478002"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -64,9 +64,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QXE_OogoV9Nf",
-        "outputId": "a2a70422-14ce-45cc-8e28-d64d85b1c826"
+        "outputId": "a5bc714a-231e-4788-bac4-dc528e92e164"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -90,13 +90,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "taGCP-gCgqX8",
-        "outputId": "74ab1872-503d-4fba-a151-a4204b5e2363"
+        "outputId": "88dc2f4c-420c-4f74-8210-2e0ea74bcf97"
       },
       "outputs": [
         {
@@ -109,8 +109,8 @@
       ],
       "source": [
         "# !git clone --recurse-submodules https://github.com/mikel-brostrom/Yolov5_StrongSORT_OSNet.git  # clone repo\n",
-        "!pip install -qr requirements.txt  # install dependencies\n",
         "%cd /content/drive/MyDrive/colab/Yolov5_StrongSORT_OSNet\n",
+        "!pip install -qr requirements.txt  # install dependencies\n",
         "import torch\n",
         "from IPython.display import Image, clear_output  # to display images\n",
         "\n",
@@ -120,13 +120,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "NbJAsN0j4RNX",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a652e6cb-1ec1-419a-c29f-a84afda4c590"
+        "outputId": "0e4b978a-56ad-41a8-b604-ecd67a2d19b6"
       },
       "outputs": [
         {
@@ -147,47 +147,22 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "1JQRVPMtA9Cr"
+        "id": "b9XXkr-HTN2b"
       },
       "source": [
-        "# Download data"
+        "# Download youtube video and cut\n",
+        "\n"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "4Acf_nRZ7yS6"
-      },
-      "outputs": [],
-      "source": [
-        "# # get yolov5m model trained on the crowd-human dataset\n",
-        "# !wget -nc https://github.com/mikel-brostrom/Yolov5_StrongSORT_OSNet/releases/download/v.2.0/crowdhuman_yolov5m.pt -O /content/Yolov5_StrongSORT_OSNet/yolov5/crowdhuman_yolov5m.pt\n",
-        "\n",
-        "# # get the test video from the repo\n",
-        "# !wget -nc https://github.com/mikel-brostrom/Yolov5_StrongSORT_OSNet/releases/download/v.2.0/test.avi\n",
-        "# # extract 3 seconds worth of video frames of it\n",
-        "# !yes | ffmpeg -ss 00:00:00 -i /content/Yolov5_StrongSORT_OSNet/Speed Camera Flash Australia Melbourne.mp4 -t 00:00:10 -c copy out.avi"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "b9XXkr-HTN2b"
-      },
-      "source": [
-        "## Download youtube video and cut"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 5,
-      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "crNkKGT1A7GB",
-        "outputId": "e0aea7b8-8aaa-44b7-d47a-8a9a2c0bb62a"
+        "outputId": "30c5ea7f-e8a2-49e0-c783-6d525ccc8d17"
       },
       "outputs": [
         {
@@ -197,7 +172,7 @@
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting pytube\n",
             "  Downloading pytube-12.1.0-py3-none-any.whl (56 kB)\n",
-            "\u001b[K     |████████████████████████████████| 56 kB 4.0 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 56 kB 3.4 MB/s \n",
             "\u001b[?25hInstalling collected packages: pytube\n",
             "Successfully installed pytube-12.1.0\n"
           ]
@@ -215,12 +190,12 @@
       "metadata": {
         "id": "hqYVeFdHXw1u"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "VmvBg6BBBJoN"
       },
@@ -242,26 +217,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "0aLHhyVRBvhn"
       },
       "outputs": [],
       "source": [
         "# extract seconds worth of video frames of it\n",
-        "!yes | ffmpeg -ss 00:00:23 -i \"/content/drive/MyDrive/colab/videos/Port of Tauranga  Time Lapse.mp4\" -t 00:00:33 -c copy /content/drive/MyDrive/colab/videos/port.avi\n",
+        "!yes | ffmpeg -ss 00:00:23 -i \"/content/drive/MyDrive/colab/videos/Port of Tauranga  Time Lapse.mp4\" -t 33 -c copy /content/drive/MyDrive/colab/videos/port.avi\n",
         "clear_output()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "YO5l9K3K10GL"
       },
       "outputs": [],
       "source": [
-        "!ffmpeg -i \"/content/drive/MyDrive/colab/videos/port.avi\" ./videos/port.mp4\n",
+        "!ffmpeg -i \"/content/drive/MyDrive/colab/videos/port.avi\" /content/drive/MyDrive/colab/videos/port.mp4\n",
         "clear_output()"
       ]
     },
@@ -271,11 +246,11 @@
         "id": "oqIP5shr9HQd"
       },
       "source": [
-        "## Run inference on video\n",
+        "# Run inference on video\n",
         "\n",
         "The ``cv2.imshow()`` and ``cv.imshow()`` functions from the [opencv-python](https://github.com/skvark/opencv-python) package are incompatible with Jupyter notebook; see https://github.com/jupyter/notebook/issues/3935. \n",
         "\n",
-        "Hence we chose to save it to file in this notebook. Locally you can use the ``--show-vid`` flag in order visualize the tracking in real-time"
+        "Hence we chose to save it to file in this notebook. Locally you can use the ``--show-vid`` flag in order visualize the tracking in real-time."
       ]
     },
     {
@@ -289,13 +264,24 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "!mkdir /content/drive/MyDrive/colab/weights"
+      ],
+      "metadata": {
+        "id": "zu-t2d0F8OGu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "2f_kq_MjCU5n"
       },
       "outputs": [],
       "source": [
-        "!wget \"https://github.com/ultralytics/yolov5/releases/download/v6.1/yolov5m.pt\" -O /content/yolov5m.pt"
+        "!wget \"https://github.com/ultralytics/yolov5/releases/download/v6.1/yolov5m.pt\" -O /content/drive/MyDrive/colab/weights/yolov5m.pt"
       ]
     },
     {
@@ -308,9 +294,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6ztH_8ajefc2",
-        "outputId": "d3a8d671-50fa-4cef-d659-f2669dac7778"
+        "outputId": "ff0dcd75-4f84-4cc5-d229-d5ac0634ed08"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -394,12 +380,9 @@
       "execution_count": null,
       "metadata": {
         "colab": {
-          "background_save": true,
-          "base_uri": "https://localhost:8080/",
-          "height": 741
+          "background_save": true
         },
-        "id": "RyXr0xsZB897",
-        "outputId": "31e216d8-8aae-400b-aa82-281a995f42a1"
+        "id": "RyXr0xsZB897"
       },
       "outputs": [],
       "source": [
