new video and inference

--- a/Yolov5_DeepSort.ipynb
+++ b/Yolov5_DeepSort.ipynb
@@ -30,7 +30,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "s7gz3irgVxII",
-        "outputId": "fc79b9c5-67b9-469b-c4db-2c3d33478002"
+        "outputId": "427ded2e-c6de-441e-be42-ac7b2065a165"
       },
       "execution_count": null,
       "outputs": [
@@ -210,10 +210,19 @@
         "    yt = yt.streams.filter(progressive=True, file_extension='mp4').order_by('resolution').desc().first()\n",
         "    if not os.path.exists(path):\n",
         "        os.makedirs(path)\n",
-        "    yt.download(path)\n",
-        "\n",
-        "downloadYouTube('https://www.youtube.com/watch?v=X6Thg-fjFsY', '/content/drive/MyDrive/colab/videos')"
+        "    yt.download(path)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "downloadYouTube('https://www.youtube.com/watch?v=81SJn_KuNUc', '/content/drive/MyDrive/colab/videos')"
+      ],
+      "metadata": {
+        "id": "GfrA8cyYzySl"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -224,7 +233,7 @@
       "outputs": [],
       "source": [
         "# extract seconds worth of video frames of it\n",
-        "!yes | ffmpeg -ss 00:00:23 -i \"/content/drive/MyDrive/colab/videos/Port of Tauranga  Time Lapse.mp4\" -t 33 -c copy /content/drive/MyDrive/colab/videos/port.avi\n",
+        "!yes | ffmpeg -ss 00:00:00 -i \"/content/drive/MyDrive/colab/videos/Cruise port of Corfu Greece.mp4\" -t 25 -c copy /content/drive/MyDrive/colab/videos/cruise_ship.avi\n",
         "clear_output()"
       ]
     },
@@ -236,7 +245,7 @@
       },
       "outputs": [],
       "source": [
-        "!ffmpeg -i \"/content/drive/MyDrive/colab/videos/port.avi\" /content/drive/MyDrive/colab/videos/port.mp4\n",
+        "!ffmpeg -i \"/content/drive/MyDrive/colab/videos/cruise_ship.avi\" /content/drive/MyDrive/colab/videos/cruise_ship.mp4\n",
         "clear_output()"
       ]
     },
@@ -315,7 +324,7 @@
       },
       "outputs": [],
       "source": [
-        "!python track.py --yolo-weights \"/content/drive/MyDrive/colab/yolov5/runs/train/exp/weights/best.pt\" --strong-sort-weights osnet_x0_25_msmt17.pt --source \"/content/drive/MyDrive/colab/videos/port.mp4\" --save-vid"
+        "!python track.py --yolo-weights \"/content/drive/MyDrive/colab/yolov5/runs/train/exp/weights/best.pt\" --strong-sort-weights osnet_x0_25_msmt17.pt --source \"/content/drive/MyDrive/colab/videos/cruise_ship.mp4\" --save-vid"
       ]
     },
     {
