--- a/YOLOv5_Custom_Training.ipynb
+++ b/YOLOv5_Custom_Training.ipynb
@@ -35,9 +35,9 @@
       "source": [
         "# Custom Training with YOLOv5\n",
         "\n",
-        "In this tutorial, we assemble a dataset and train a custom YOLOv5 model to recognize the objects in our dataset. To do so we will take the following steps:\n",
+        "In this tutorial, we download a dataset and train a custom YOLOv5 model to recognize the objects in our dataset. To do so we will take the following steps:\n",
         "\n",
-        "* Gather a dataset of images and label our dataset\n",
+        "* Download a labeled dataset of images\n",
         "* Export our dataset to YOLOv5\n",
         "* Train YOLOv5 to recognize the objects in our dataset\n",
         "* Evaluate our YOLOv5 model's performance\n",
@@ -51,7 +51,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Mount you drive"
+        "# Mount your drive"
       ],
       "metadata": {
         "id": "P-LgwiUnKhGg"
@@ -184,6 +184,7 @@
         "import torch\n",
         "import os\n",
         "from IPython.display import Image, clear_output  # to display images\n",
+        "\n",
         "clear_output()\n",
         "\n",
         "print(f\"Setup complete. Using torch {torch.__version__} ({torch.cuda.get_device_properties(0).name if torch.cuda.is_available() else 'CPU'})\")"
