comments and corrections

--- a/YOLOv5_Hyperparameter_Evolution.ipynb
+++ b/YOLOv5_Hyperparameter_Evolution.ipynb
@@ -3,10 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "YOLOv5-Hyperparameter-Evolution.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMA+n3vLl1nauIo+oO2MNkC",
+      "authorship_tag": "ABX9TyNfPZ3aE5203lOo12MrKUGI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,6 +30,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Mount your drive"
+      ],
+      "metadata": {
+        "id": "SOT0FJj54ZmK"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -38,7 +46,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XzxQASmvBMcF",
-        "outputId": "178cfb8a-ea6d-452d-c567-b359390698e0"
+        "outputId": "5829db6f-59e6-409c-d4fa-85028ecd7cf7"
       },
       "outputs": [
         {
@@ -86,7 +94,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jDTqd5ntBzrx",
-        "outputId": "1ae7f361-0014-400c-c79a-dd1b8ebea4ef"
+        "outputId": "0295430d-f677-415f-95b1-4bf81404debc"
       },
       "execution_count": null,
       "outputs": [
@@ -120,6 +128,8 @@
         "import os\n",
         "from IPython.display import Image, clear_output  # to display images\n",
         "\n",
+        "clear_output()\n",
+        "\n",
         "print(f\"Setup complete. Using torch {torch.__version__} ({torch.cuda.get_device_properties(0).name if torch.cuda.is_available() else 'CPU'})\")"
       ],
       "metadata": {
@@ -127,7 +137,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "j0JpWuu2CNsx",
-        "outputId": "ce46d529-496f-40d6-b2d8-f5ee85ef2d6f"
+        "outputId": "6de9cc32-6758-4fd8-f1de-ccb3390709a9"
       },
       "execution_count": null,
       "outputs": [
@@ -135,17 +145,6 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "/content/drive/MyDrive/colab/yolov5\n",
-            "\u001b[K     |████████████████████████████████| 1.6 MB 51.5 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 145 kB 40.4 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 178 kB 54.5 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 1.1 MB 60.3 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 67 kB 2.8 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 54 kB 3.0 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 138 kB 60.0 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 62 kB 1.4 MB/s \n",
-            "\u001b[?25h  Building wheel for roboflow (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Building wheel for wget (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Setup complete. Using torch 1.12.1+cu113 (Tesla T4)\n"
           ]
         }
@@ -247,7 +246,11 @@
     {
       "cell_type": "code",
       "source": [
-        "!python train.py --epochs 10 --data '/content/drive/MyDrive/colab/datasets/ShipClassification-3/data.yaml' --weights yolov5m.pt --cache --evolve"
+        "!python train.py --epochs 10 \\\n",
+        "                 --data '/content/drive/MyDrive/colab/datasets/ShipClassification-3/data.yaml' \\\n",
+        "                 --weights yolov5m.pt \\\n",
+        "                 --cache \\\n",
+        "                 --evolve"
       ],
       "metadata": {
         "id": "GIQz51En1xxP"
@@ -258,7 +261,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Train the data"
+        "# Train the Data"
       ],
       "metadata": {
         "id": "63AJn7ny6Cvj"
@@ -267,7 +270,13 @@
     {
       "cell_type": "code",
       "source": [
-        "!python train.py --img 416 --batch 32 --epochs 150 --data '/content/drive/MyDrive/colab/datasets/ShipClassification-3/data.yaml' --weights yolov5m.pt --cache --hyp \"/content/drive/MyDrive/colab/yolov5/runs/evolve/exp/hyp_evolve.yaml\""
+        "!python train.py --img 416 \\\n",
+        "                 --batch 32 \\\n",
+        "                 --epochs 150 \\\n",
+        "                 --data '/content/drive/MyDrive/colab/datasets/ShipClassification-3/data.yaml' \\\n",
+        "                 --weights yolov5m.pt \\\n",
+        "                 --cache \\\n",
+        "                 --hyp \"/content/drive/MyDrive/colab/yolov5/runs/evolve/exp/hyp_evolve.yaml\""
       ],
       "metadata": {
         "id": "5a71ySkJ48qu"
@@ -278,7 +287,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Evaluate the model performance"
+        "# Evaluate the Model Performance"
       ],
       "metadata": {
         "id": "8f8HseGaUi3g"
@@ -316,23 +325,37 @@
     {
       "cell_type": "code",
       "source": [
+        "# create a metrics list\n",
         "metrics_list = ['metrics/mAP_0.5', 'metrics/mAP_0.5:0.95', 'metrics/precision', 'metrics/recall']\n",
         "\n",
         "plt.rcParams[\"figure.figsize\"] = (10,10)\n",
         "\n",
-        "def metrics_plotting(path_list, num):\n",
+        "# helper function for inline display of training runs without using TensorBoard\n",
+        "# path_dict - paths to multiple results.csv files\n",
+        "# num - number of evenly spaced numbers over the interval of epochs\n",
+        "#     - changeable to obtain better interpolations of the training runs\n",
+        "def metrics_plotting(path_dict, num):\n",
         "    for n, metric in enumerate (metrics_list):\n",
         "        n += 1\n",
         "        plt.subplot(2, 2, n)\n",
-        "        for path in path_list:\n",
-        "            data = pd.read_csv(path_list[path], sep=',', header=0, skipinitialspace=True)\n",
+        "        for path in path_dict:\n",
+        "            data = pd.read_csv(path_dict[path], sep=',', header=0, skipinitialspace=True)\n",
+        "\n",
+        "            # rename the metrics columns with the keys in path_dict\n",
         "            data.rename(columns={metric : path}, inplace=True)\n",
+        "\n",
+        "            # compute the coefficients of interpolating B-spline and its values     \n",
         "            spline = make_interp_spline(data['epoch'], data[path])\n",
-        "            epochs = np.linspace(0, len(data), num)\n",
+        "            epochs = np.linspace(0, len(data), num)                \n",
         "            spline_values = spline(epochs)\n",
+        "\n",
+        "            # change the end spline value to have matching with the real one on your plot\n",
         "            spline_values[-1]=data[path].to_numpy()[-1]\n",
+        "\n",
+        "            # plot the training and spline curve\n",
         "            plt.plot('epoch', path, data=data, linestyle=':', linewidth=1, alpha=0.8)\n",
         "            plt.plot(epochs, spline_values, linewidth=2, label=path)\n",
+        "\n",
         "        plt.title(metric)\n",
         "        plt.xlabel('epoch')\n",
         "        plt.legend()\n",
@@ -347,12 +370,19 @@
     {
       "cell_type": "code",
       "source": [
-        "def metrics_table(path_list):\n",
-        "    for n, path in enumerate(path_list):\n",
-        "        train_data = pd.read_csv(path_list[path], sep=',', header=0, skipinitialspace=True)\n",
+        "# helper function for table display of metrics values for training runs in path dictionary\n",
+        "def metrics_table(path_dict):\n",
+        "    for n, path in enumerate(path_dict):\n",
+        "        train_data = pd.read_csv(path_dict[path], sep=',', header=0, skipinitialspace=True)\n",
+        "        \n",
+        "        # rename the end row index with the path key in the path dictionary\n",
         "        train_data.rename(index={len(train_data)-1 : path}, inplace=True)\n",
-        "        train_metrics = train_data.iloc[:, [4, 5, 6, 7]]\n",
+        "\n",
+        "        # locate the metrics columns and extract the values for the last epoch\n",
+        "        train_metrics = train_data.loc[:, metrics_list]\n",
         "        comparison_data = train_metrics.tail(1)\n",
+        "\n",
+        "        # for multiple runs, concatenate the metrics values\n",
         "        if n == 0:\n",
         "            comparsion_table = pd.concat([comparison_data])\n",
         "        else:\n",
@@ -369,7 +399,7 @@
     {
       "cell_type": "code",
       "source": [
-        "path_list = {'The best weights': '/content/drive/MyDrive/colab/yolov5/runs/train/exp/results.csv',\n",
+        "path_dict = {'The best weights': '/content/drive/MyDrive/colab/yolov5/runs/train/exp/results.csv',\n",
         "            }"
       ],
       "metadata": {
@@ -381,8 +411,8 @@
     {
       "cell_type": "code",
       "source": [
-        "metrics_plotting(path_list=path_list, num=15)\n",
-        "metrics_table(path_list=path_list)"
+        "metrics_plotting(path_dict=path_dict, num=15)\n",
+        "metrics_table(path_dict=path_dict)"
       ],
       "metadata": {
         "colab": {
@@ -390,7 +420,7 @@
           "height": 685
         },
         "id": "XMZV_6SVXhkF",
-        "outputId": "23e2a348-7dd3-4437-8be1-a741847a70d8"
+        "outputId": "32cc426f-5097-410a-93c9-1c470282a13f"
       },
       "execution_count": null,
       "outputs": [
@@ -410,15 +440,15 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "                  metrics/precision  metrics/recall  metrics/mAP_0.5  \\\n",
-              "The best weights             0.9196         0.91715          0.93513   \n",
+              "                  metrics/mAP_0.5  metrics/mAP_0.5:0.95  metrics/precision  \\\n",
+              "The best weights          0.93513               0.60132             0.9196   \n",
               "\n",
-              "                  metrics/mAP_0.5:0.95  \n",
-              "The best weights               0.60132  "
+              "                  metrics/recall  \n",
+              "The best weights         0.91715  "
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-930e964b-173c-4557-9e5e-3d84252a3e06\">\n",
+              "  <div id=\"df-900c2ab9-ca3f-47b3-8082-971092bacb8d\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -438,24 +468,24 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>metrics/precision</th>\n",
-              "      <th>metrics/recall</th>\n",
               "      <th>metrics/mAP_0.5</th>\n",
               "      <th>metrics/mAP_0.5:0.95</th>\n",
+              "      <th>metrics/precision</th>\n",
+              "      <th>metrics/recall</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>The best weights</th>\n",
-              "      <td>0.9196</td>\n",
-              "      <td>0.91715</td>\n",
               "      <td>0.93513</td>\n",
               "      <td>0.60132</td>\n",
+              "      <td>0.9196</td>\n",
+              "      <td>0.91715</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-930e964b-173c-4557-9e5e-3d84252a3e06')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-900c2ab9-ca3f-47b3-8082-971092bacb8d')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -506,12 +536,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-930e964b-173c-4557-9e5e-3d84252a3e06 button.colab-df-convert');\n",
+              "          document.querySelector('#df-900c2ab9-ca3f-47b3-8082-971092bacb8d button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-930e964b-173c-4557-9e5e-3d84252a3e06');\n",
+              "          const element = document.querySelector('#df-900c2ab9-ca3f-47b3-8082-971092bacb8d');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
