comments and corrections

--- a/YOLOv5_Hyperparameter_Evolution_2.ipynb
+++ b/YOLOv5_Hyperparameter_Evolution_2.ipynb
@@ -3,10 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "YOLOv5-Hyperparameter-Evolution-2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMg2heSrHqNPj05KhobOuju",
+      "authorship_tag": "ABX9TyNOm7HSRntzq1XD9hUcx02e",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,6 +30,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Mount your drive"
+      ],
+      "metadata": {
+        "id": "PT9Qh8CM8jxM"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -38,7 +46,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XzxQASmvBMcF",
-        "outputId": "d31cb76f-ceae-44f5-b0d7-6f0ea8c196cf"
+        "outputId": "709d8d08-2e3b-4eb0-e6aa-67a6a5d20953"
       },
       "outputs": [
         {
@@ -86,7 +94,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jDTqd5ntBzrx",
-        "outputId": "b1f57d17-7c2b-4f17-ec2a-c5b4cff902f2"
+        "outputId": "094af94b-d57b-4e41-d1e5-1eb71a32eabf"
       },
       "execution_count": null,
       "outputs": [
@@ -120,6 +128,8 @@
         "import os\n",
         "from IPython.display import Image, clear_output  # to display images\n",
         "\n",
+        "clear_output()\n",
+        "\n",
         "print(f\"Setup complete. Using torch {torch.__version__} ({torch.cuda.get_device_properties(0).name if torch.cuda.is_available() else 'CPU'})\")"
       ],
       "metadata": {
@@ -127,7 +137,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "j0JpWuu2CNsx",
-        "outputId": "492b2a18-e54a-47ca-96cb-7f1d07802547"
+        "outputId": "1ad75838-8124-4456-9ca4-5afab74a7d0c"
       },
       "execution_count": null,
       "outputs": [
@@ -135,17 +145,6 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "/content/drive/MyDrive/colab/yolov5\n",
-            "\u001b[K     |████████████████████████████████| 1.6 MB 7.7 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 145 kB 9.7 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 178 kB 64.7 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 1.1 MB 66.1 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 67 kB 7.2 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 54 kB 3.3 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 138 kB 62.1 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 62 kB 1.7 MB/s \n",
-            "\u001b[?25h  Building wheel for roboflow (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Building wheel for wget (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Setup complete. Using torch 1.12.1+cu113 (Tesla T4)\n"
           ]
         }
@@ -247,7 +246,11 @@
     {
       "cell_type": "code",
       "source": [
-        "!python train.py --epochs 10 --data '/content/drive/MyDrive/colab/datasets/SET_2995-1/data.yaml' --weights yolov5m.pt --cache --evolve"
+        "!python train.py --epochs 10 \\\n",
+        "                 --data '/content/drive/MyDrive/colab/datasets/SET_2995-1/data.yaml' \\\n",
+        "                 --weights yolov5m.pt \\\n",
+        "                 --cache \\\n",
+        "                 --evolve"
       ],
       "metadata": {
         "id": "GIQz51En1xxP"
@@ -258,7 +261,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Train the data"
+        "# Train the Data"
       ],
       "metadata": {
         "id": "63AJn7ny6Cvj"
@@ -267,7 +270,13 @@
     {
       "cell_type": "code",
       "source": [
-        "!python train.py --img 416 --batch 64 --epochs 100 --data '/content/drive/MyDrive/colab/datasets/SET_2995-1/data.yaml' --weights yolov5m.pt --cache --hyp \"/content/drive/MyDrive/colab/yolov5/runs/evolve/exp2/hyp_evolve.yaml\""
+        "!python train.py --img 416 \\\n",
+        "                 --batch 64 \\\n",
+        "                 --epochs 100 \\\n",
+        "                 --data '/content/drive/MyDrive/colab/datasets/SET_2995-1/data.yaml' \\\n",
+        "                 --weights yolov5m.pt \\\n",
+        "                 --cache \\\n",
+        "                 --hyp \"/content/drive/MyDrive/colab/yolov5/runs/evolve/exp2/hyp_evolve.yaml\""
       ],
       "metadata": {
         "id": "5a71ySkJ48qu"
@@ -316,23 +325,37 @@
     {
       "cell_type": "code",
       "source": [
+        "# create a metrics list\n",
         "metrics_list = ['metrics/mAP_0.5', 'metrics/mAP_0.5:0.95', 'metrics/precision', 'metrics/recall']\n",
         "\n",
         "plt.rcParams[\"figure.figsize\"] = (10,10)\n",
         "\n",
-        "def metrics_plotting(path_list, num):\n",
+        "# helper function for inline display of training runs without using TensorBoard\n",
+        "# path_dict - paths to multiple results.csv files\n",
+        "# num - number of evenly spaced numbers over the interval of epochs\n",
+        "#     - changeable to obtain better interpolations of the training runs\n",
+        "def metrics_plotting(path_dict, num):\n",
         "    for n, metric in enumerate (metrics_list):\n",
         "        n += 1\n",
         "        plt.subplot(2, 2, n)\n",
-        "        for path in path_list:\n",
-        "            data = pd.read_csv(path_list[path], sep=',', header=0, skipinitialspace=True)\n",
+        "        for path in path_dict:\n",
+        "            data = pd.read_csv(path_dict[path], sep=',', header=0, skipinitialspace=True)\n",
+        "\n",
+        "            # rename the metrics columns with the keys in path_dict\n",
         "            data.rename(columns={metric : path}, inplace=True)\n",
+        "\n",
+        "            # compute the coefficients of interpolating B-spline and its values     \n",
         "            spline = make_interp_spline(data['epoch'], data[path])\n",
-        "            epochs = np.linspace(0, len(data), num)\n",
+        "            epochs = np.linspace(0, len(data), num)                \n",
         "            spline_values = spline(epochs)\n",
+        "\n",
+        "            # change the end spline value to have matching with the real one on your plot\n",
         "            spline_values[-1]=data[path].to_numpy()[-1]\n",
+        "\n",
+        "            # plot the training and spline curve\n",
         "            plt.plot('epoch', path, data=data, linestyle=':', linewidth=1, alpha=0.8)\n",
         "            plt.plot(epochs, spline_values, linewidth=2, label=path)\n",
+        "\n",
         "        plt.title(metric)\n",
         "        plt.xlabel('epoch')\n",
         "        plt.legend()\n",
@@ -347,12 +370,19 @@
     {
       "cell_type": "code",
       "source": [
-        "def metrics_table(path_list):\n",
-        "    for n, path in enumerate(path_list):\n",
-        "        train_data = pd.read_csv(path_list[path], sep=',', header=0, skipinitialspace=True)\n",
+        "# helper function for table display of metrics values for training runs in path dictionary\n",
+        "def metrics_table(path_dict):\n",
+        "    for n, path in enumerate(path_dict):\n",
+        "        train_data = pd.read_csv(path_dict[path], sep=',', header=0, skipinitialspace=True)\n",
+        "        \n",
+        "        # rename the end row index with the path key in the path dictionary\n",
         "        train_data.rename(index={len(train_data)-1 : path}, inplace=True)\n",
-        "        train_metrics = train_data.iloc[:, [4, 5, 6, 7]]\n",
+        "\n",
+        "        # locate the metrics columns and extract the values for the last epoch\n",
+        "        train_metrics = train_data.loc[:, metrics_list]\n",
         "        comparison_data = train_metrics.tail(1)\n",
+        "\n",
+        "        # for multiple runs, concatenate the metrics values\n",
         "        if n == 0:\n",
         "            comparsion_table = pd.concat([comparison_data])\n",
         "        else:\n",
@@ -369,7 +399,7 @@
     {
       "cell_type": "code",
       "source": [
-        "path_list = {'The best weights': '/content/drive/MyDrive/colab/yolov5/runs/train/exp2/results.csv',\n",
+        "path_dict = {'The best weights': '/content/drive/MyDrive/colab/yolov5/runs/train/exp2/results.csv',\n",
         "            }"
       ],
       "metadata": {
@@ -381,8 +411,8 @@
     {
       "cell_type": "code",
       "source": [
-        "metrics_plotting(path_list=path_list, num=15)\n",
-        "metrics_table(path_list=path_list)"
+        "metrics_plotting(path_dict=path_dict, num=15)\n",
+        "metrics_table(path_dict=path_dict)"
       ],
       "metadata": {
         "colab": {
@@ -390,7 +420,7 @@
           "height": 685
         },
         "id": "Kreg2ROkLlyH",
-        "outputId": "012b71a1-13e3-4fff-dd60-7ea05293202c"
+        "outputId": "582aff86-c59e-4e3f-a2c4-fd7a37840d71"
       },
       "execution_count": null,
       "outputs": [
@@ -410,15 +440,15 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "                  metrics/precision  metrics/recall  metrics/mAP_0.5  \\\n",
-              "The best weights            0.85604         0.80179          0.82193   \n",
+              "                  metrics/mAP_0.5  metrics/mAP_0.5:0.95  metrics/precision  \\\n",
+              "The best weights          0.82193                0.5739            0.85604   \n",
               "\n",
-              "                  metrics/mAP_0.5:0.95  \n",
-              "The best weights                0.5739  "
+              "                  metrics/recall  \n",
+              "The best weights         0.80179  "
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-7a342a44-7f71-44fe-9cfa-b69c370172e9\">\n",
+              "  <div id=\"df-8d74bdc1-656c-40c1-8905-39460a5978ef\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -438,24 +468,24 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>metrics/precision</th>\n",
-              "      <th>metrics/recall</th>\n",
               "      <th>metrics/mAP_0.5</th>\n",
               "      <th>metrics/mAP_0.5:0.95</th>\n",
+              "      <th>metrics/precision</th>\n",
+              "      <th>metrics/recall</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>The best weights</th>\n",
-              "      <td>0.85604</td>\n",
-              "      <td>0.80179</td>\n",
               "      <td>0.82193</td>\n",
               "      <td>0.5739</td>\n",
+              "      <td>0.85604</td>\n",
+              "      <td>0.80179</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7a342a44-7f71-44fe-9cfa-b69c370172e9')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8d74bdc1-656c-40c1-8905-39460a5978ef')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -506,12 +536,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-7a342a44-7f71-44fe-9cfa-b69c370172e9 button.colab-df-convert');\n",
+              "          document.querySelector('#df-8d74bdc1-656c-40c1-8905-39460a5978ef button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-7a342a44-7f71-44fe-9cfa-b69c370172e9');\n",
+              "          const element = document.querySelector('#df-8d74bdc1-656c-40c1-8905-39460a5978ef');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -537,6 +567,15 @@
           "execution_count": 8
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "f1hubWLV96wt"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
